2009-08-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Get rid of Automake's "maintainer mode".

	* configure.ac,
	* Makefile.am,
	* tools/bin/Makefile.am: Do not use MAINTAINER_MODE. (Be optimistic
	about the behavior of `missing' when `help2man' does not exist.)

2009-08-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve MT Alpha code generation.

	When the compiler runs out of local registers for automatic
	variables it may uses RA and/or FP for them. This causes a spill
	but also a reload before the end of the function. Since the result
	of this reload is not used, it may cause a pipeline stall in the
	next instance of the thread when the register is reused.

	This change attempts to protect this situation by forcing these
	loads to complete before the thread terminates.
	
	* tools/bin/spp: New transforms `detectload' and
	`completeload'. Use them.

2009-08-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Reorganize test suite.

	Make the numerical prefixes follow "increasing order of
	difficulty" for the compiler, as was originally intended.

	* tools/tests/0_slr: Rename to...
	* tools/tests/2_slr: ...here.
	
	* tools/tests/2_args: Rename to...
	* tools/tests/1_createargs: ...here.

	* tools/tests/3_mem: Rename to...
	* tools/tests/2_usegp: ...here.

	* tools/tests/4_index: Rename to...
	* tools/tests/3_index: ...here.

	* tools/tests/5_thdecl: Rename to...
	* tools/tests/4_thdecl: ...here.
	
	* tools/tests/6_break: Rename to...
	* tools/tests/3_break: ...here.
	
	* tools/tests/7_args: Rename to...
	* tools/tests/2_manyglobals: ...here.

	* tools/tests/8_funs: Rename to...
	* tools/tests/4_funcalls: ...here.
	
	* tools/tests/9_manyregs: Rename to...
	* tools/tests/2_manylocals: ...here.
	
	* tools/tests/livemore8.c: Rename to...
	* tools/tests/2_manyglobals/livermore8.c: ...here.

	* tools/tests/mkalltests.sh: Update accordingly.
	
2009-08-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make the test environment more user-friendly. 

	(requested by S. Polstra)
